# paragon2

./: .gitignore  makeHaddock.sh  paragon.cabal
doc/handbook/: appendixParalocksOperations.tex  firstParagons.tex  main.tex
examples/LexicalScoped/: build.xml
examples/LexicalScoped/src/: AtoBBlock.para  FlowBlock.para  LexicalFlow.para  LockCirc.para  TestData.para  TestFlow.para
examples/RobustDeclassify/: build.xml
examples/RobustDeclassify/src/: RobustDeclassify.para  TestDeclassify.para
examples/SealedBids/: README  build.xml
examples/SealedBids/src/: BidLocks.para  BidSystem.para  Bidder.para  Channel.java  Channel.pi  NoBidExc.para
examples/SimpleDeclassify/: build.xml
examples/SimpleDeclassify/src/: SimpleDeclassify.para  TestDeclassify.para
flowlocks-framework/: flowlocks-framework.cabal
flowlocks-framework/tests/: Datalog.hs  TestAll.hs
lib/java/io/: BufferedOutputStream.pi  BufferedReader.pi  ByteArrayInputStream.pi  ByteArrayOutputStream.pi  FileInputStream.pi  FileNotFoundException.pi  FilterInputStream.pi  FilterOutputStream.pi  IOException.pi  InputStream.pi  InputStreamReader.pi  OutputStream.pi  PrintStream.pi  PrintWriter.pi  Reader.pi  StreamTokenizer.pi  UnknownHostException.pi
lib/java/lang/: ArithmeticException.pi  ArrayIndexOutOfBoundsException.pi  ArrayStoreException.pi  Boolean.pi  Byte.pi  Character.pi  ClassCastException.pi  Exception.pi  IllegalArgumentException.pi  IllegalStateException.pi  IndexOutOfBoundsException.pi  Integer.pi  Math.pi  NullPointerException.pi  NumberFormatException.pi  Object.pi  RuntimeException.pi  SecurityException.pi  String.pi  StringBuffer.pi  StringIndexOutOfBoundsException.pi  System.pi  Throwable.pi  UnsupportedOperationException.pi
lib/java/math/: BigInteger.pi
lib/java/net/: InetAddress.pi  Socket.pi
lib/java/security/: DigestException.pi  GeneralSecurityException.pi  InvalidKeyException.pi  InvalidParameterException.pi  Key.pi  KeyPair.pi  KeyPairGenerator.pi  KeyStore.pi  KeyStoreException.pi  MessageDigest.pi  NoSuchAlgorithmException.pi  NoSuchProviderException.pi  PrivateKey.pi  Provider.pi  PublicKey.pi  SecureRandom.pi  Security.pi  Signature.pi  SignatureException.pi  UnrecoverableKeyException.pi
lib/java/util/: AbstractCollection.pi  AbstractSet.pi  ArrayList.pi  ArrayMap.pi  Collection.pi  HashMap.pi  HashTable.pi  Map.pi  NoSuchElementException.pi  Properties.pi  Random.pi  Set.pi  StringTokenizer.pi
lib/javax/crypto/: BadPaddingException.pi  Cipher.pi  CipherOutputStream.pi  IllegalBlockSizeException.pi  KeyGenerator.pi  NoSuchPaddingException.pi  SecretKey.pi
lib/javax/mail/: Address.pi  AuthenticationFailedException.pi  Authenticator.pi  Folder.pi  FolderNotFoundException.pi  IllegalWriteException.pi  Message.pi  MessagingException.pi  NoSuchProviderException.pi  Part.pi  PasswordAuthentication.pi  RecipientType.pi  SendFailedException.pi  Session.pi  Store.pi  Transport.pi
lib/javax/servlet/: ServletException.pi
simpletestsuite/: Makefile  README  RunCommand.hs  Test.hs
simpletestsuite/bad/arrays/: BasicArrayPolicies.exp  BasicArrayPolicies.para
simpletestsuite/bad/containment/: Bad1.exp  Bad1.para  Bad2.exp  Bad2.para  Bad3.exp  Bad3.para  Bad4.exp  Bad4.para
simpletestsuite/bad/fieldstatic/: InstanceArrayAccessFromStaticField.exp  InstanceArrayAccessFromStaticField.para  InstanceArrayFromStaticField.exp  InstanceArrayFromStaticField.para  InstanceFieldFromStaticField.exp  InstanceFieldFromStaticField.para  InstanceFieldInstanceMethodFromStaticField.exp  InstanceFieldInstanceMethodFromStaticField.para  InstanceFieldStaticMethodFromStaticField.exp  InstanceFieldStaticMethodFromStaticField.para  InstanceMethodFromStaticArrayField.exp  InstanceMethodFromStaticArrayField.para  InstanceMethodFromStaticField.exp  InstanceMethodFromStaticField.para  InstanceMethodStaticFieldFromStaticField.exp  InstanceMethodStaticFieldFromStaticField.para  InstanceMethodStaticMethodFromStaticField.exp  InstanceMethodStaticMethodFromStaticField.para  ThisInstanceMethodFromStaticField.exp  ThisInstanceMethodFromStaticField.para  ThisStaticMethodFromStaticField.exp  ThisStaticMethodFromStaticField.para
simpletestsuite/bad/filenamemismatch/: FileClassMismatch.exp  FileClassMismatch.para  FileInterfaceMismatch.exp  FileInterfaceMismatch.para
simpletestsuite/bad/inference/: ImpossibilityInferred.exp  ImpossibilityInferred.para
simpletestsuite/bad/interfacefields/: InterfaceField.exp  InterfaceField.para
simpletestsuite/bad/lockproperties/: Reflexivity.exp  Reflexivity.para  Symmetry.exp  Symmetry.para  Transitivity.exp  Transitivity.para
simpletestsuite/bad/methodoverloading/: ConstructorRedefinition.exp  ConstructorRedefinition.para  InterfaceMethodOverloadingParamsReturnType.exp  InterfaceMethodOverloadingParamsReturnType.para  InterfaceMethodOverloadingReturnType.exp  InterfaceMethodOverloadingReturnType.para  InterfaceMethodRedefinition.exp  InterfaceMethodRedefinition.para  MethodOverloadingParamsReturnType.exp  MethodOverloadingParamsReturnType.para  MethodOverloadingReturnType.exp  MethodOverloadingReturnType.para  MethodRedefinition.exp  MethodRedefinition.para
simpletestsuite/bad/methodstatic/: InstanceArrayAccessAssignmentFromStaticMethod.exp  InstanceArrayAccessAssignmentFromStaticMethod.para  InstanceArrayAccessFromStaticMethod.exp  InstanceArrayAccessFromStaticMethod.para  InstanceFieldAssignmentFromStaticMethod.exp  InstanceFieldAssignmentFromStaticMethod.para  InstanceFieldFromStaticMethod.exp  InstanceFieldFromStaticMethod.para  InstanceFieldInstanceMethodFromStaticMethod.exp  InstanceFieldInstanceMethodFromStaticMethod.para  InstanceFieldStaticFieldAssignmentFromStaticMethod.exp  InstanceFieldStaticFieldAssignmentFromStaticMethod.para  InstanceFieldStaticMethodFromStaticMethod.exp  InstanceFieldStaticMethodFromStaticMethod.para  InstanceMethodFromStaticMethod.exp  InstanceMethodFromStaticMethod.para  InstanceMethodStaticFieldFromStaticMethod.exp  ThisInstanceFieldFromStaticMethod.exp  (+6 more)
website/: cases.html  download.html  index.html  style.css  tutorials.html
(+795 files in other folders)
