Name:                   paragon
Version:                0.2.0
License:                BSD3
License-File:           LICENSE
Author:                 Niklas Broberg
Maintainer:             Niklas Broberg <niklas.broberg@chalmers.se>
Category:               Language
Synopsis:               Paragon
Description:            Paragon suite
Stability:              Experimental
Tested-with:            GHC==7.0.2
Build-Type:             Simple
Cabal-Version:          >= 1.8

Extra-Source-Files:     src/Language/Java/Paragon/Lexer.x
                        lib/se/chalmers/paragon/Actor.java
                        lib/se/chalmers/paragon/ActorList.java
                        lib/se/chalmers/paragon/ActorVariable.java
                        lib/se/chalmers/paragon/Atom.java
                        lib/se/chalmers/paragon/Clause.java
                        lib/se/chalmers/paragon/ConcreteActor.java
                        lib/se/chalmers/paragon/Lock.java
                        lib/se/chalmers/paragon/LockArityError.java
                        lib/se/chalmers/paragon/LockException.java
                        lib/se/chalmers/paragon/LockState.java
                        lib/se/chalmers/paragon/Policy.java
                        lib/se/chalmers/paragon/PClause.java
                        lib/se/chalmers/paragon/UniqueNameError.java
                        lib/se/chalmers/paragon/Util.java

Flag base4

Library
  Build-Tools:          alex >= 2.3
  Build-Depends:        array >= 0.1, pretty >= 1.0, cpphs >= 1.3, parsec >= 3, containers, transformers,
                        uniplate >= 1.6.12, template-haskell >= 2.11 && < 3, directory, filepath, bytestring,
                        flowlocks-framework
-- Package used for debug printout. Remove for production build:
                        , haskell-src-exts
  if flag(base4)
    Build-depends:      base >= 4 && < 5, syb
    cpp-options:        -DBASE4
  else
    Build-depends:      base >= 3 && < 4
  GHC-options:          -Wall

  Exposed-modules:      Language.Java.Paragon.Parser,
                        Language.Java.Paragon.Pretty,
                        Language.Java.Paragon.Syntax,
                        Language.Java.Paragon.SourcePos,
                        Language.Java.Paragon.Lexer,
                        Language.Java.Paragon.Monad.Base,
                        Language.Java.Paragon.Monad.PiReader,
                        Language.Java.Paragon.Monad.Uniq,
                        Language.Java.Paragon.NameResolution,
                        Language.Java.Paragon.NameResolution.Monad,
                        Language.Java.Paragon.TypeCheck,
                        Language.Java.Paragon.TypeCheck.Interpreter,
                        Language.Java.Paragon.TypeCheck.Monad,
                        Language.Java.Paragon.TypeCheck.Monad.TcCodeM,
                        Language.Java.Paragon.TypeCheck.Monad.TcDeclM,
                        Language.Java.Paragon.TypeCheck.Monad.CodeState,
                        Language.Java.Paragon.TypeCheck.Monad.CodeEnv,
                        Language.Java.Paragon.TypeCheck.NullAnalysis,
                        Language.Java.Paragon.TypeCheck.TcExp,
                        Language.Java.Paragon.TypeCheck.TcStmt,
                        Language.Java.Paragon.TypeCheck.TypeMap,
                        Language.Java.Paragon.TypeCheck.Types,
                        Language.Java.Paragon.Compile,
                        Language.Java.Paragon.PiGeneration,
                        Language.Java.Paragon.Interaction,
                        Language.Java.Paragon.Annotated,
                        Language.Java.Paragon.Error,
                        Language.Java.Paragon.ErrorTxt,
                        Language.Java.Paragon.ErrorEclipse,
                        Language.Java.Paragon.PolicyLang,
                        Language.Java.Paragon.PolicyLang.Actors,
                        Language.Java.Paragon.PolicyLang.Locks,
                        Language.Java.Paragon.PolicyLang.Policy



  Hs-source-dirs:       src


Executable parac
  Hs-source-dirs:       src
  Main-is:              Language/Java/Paragon.hs

  Other-modules:        Language.Java.Paragon.Parser,
                        Language.Java.Paragon.Pretty,
                        Language.Java.Paragon.Syntax,
                        Language.Java.Paragon.SourcePos,
                        Language.Java.Paragon.Lexer,
                        Language.Java.Paragon.Monad.Base,
                        Language.Java.Paragon.Monad.PiReader,
                        Language.Java.Paragon.Monad.Uniq,
                        Language.Java.Paragon.NameResolution,
                        Language.Java.Paragon.NameResolution.Monad,
                        Language.Java.Paragon.TypeCheck,
                        Language.Java.Paragon.TypeCheck.Interpreter,
                        Language.Java.Paragon.TypeCheck.Monad,
                        Language.Java.Paragon.TypeCheck.Monad.TcCodeM,
                        Language.Java.Paragon.TypeCheck.Monad.TcDeclM,
                        Language.Java.Paragon.TypeCheck.Monad.CodeEnv,
                        Language.Java.Paragon.TypeCheck.Monad.CodeState,
                        Language.Java.Paragon.TypeCheck.NullAnalysis,
                        Language.Java.Paragon.TypeCheck.TcExp,
                        Language.Java.Paragon.TypeCheck.TcStmt,
                        Language.Java.Paragon.TypeCheck.TypeMap,
                        Language.Java.Paragon.TypeCheck.Types,
                        Language.Java.Paragon.Compile,
                        Language.Java.Paragon.PiGeneration,
                        Language.Java.Paragon.Interaction,
                        Language.Java.Paragon.Annotated,
                        Language.Java.Paragon.Error,
                        Language.Java.Paragon.ErrorTxt,
                        Language.Java.Paragon.ErrorEclipse,
                        Language.Java.Paragon.PolicyLang,
                        Language.Java.Paragon.PolicyLang.Actors,
                        Language.Java.Paragon.PolicyLang.Locks,
                        Language.Java.Paragon.PolicyLang.Policy


  Build-Tools:          alex >= 2.3
  Build-Depends:        array >= 0.1, pretty >= 1.0, cpphs >= 1.3, parsec >= 3, containers, transformers,
                        uniplate >= 1.6.12, directory, filepath, template-haskell >= 2.11 && < 3, bytestring,
                        flowlocks-framework
-- Package used for debug printout. Remove for production build:
                        , haskell-src-exts
  if flag(base4)
    Build-depends:      base >= 4 && < 5, syb
    cpp-options:        -DBASE4
  else
    Build-depends:      base >= 3 && < 4

  GHC-options:          -Wall -O2 -rtsopts
